[tool.poetry]
name = "philbot-voice"
version = "2.13.0"
description = ""
authors = ["philipp.lengauer <p.lengauer@gmail.com>"]
packages = [{include = "philbot-voice"}]

[tool.poetry.dependencies]
python = "3.12.4"
Flask = "3.0.3"
websocket-client = "1.8.0"
PyNaCl = "1.5.0"
PyOgg = "0.6.14a1"
yt_dlp = "2024.7.25"
opentelemetry-sdk = "1.26.0"
opentelemetry-exporter-otlp-proto-http = "1.26.0"
opentelemetry-instrumentation = "0.45b0"
opentelemetry-instrumentation-system-metrics = "0.45b0"
opentelemetry-instrumentation-flask = "0.45b0"
opentelemetry-instrumentation-urllib = "0.45b0"
opentelemetry-instrumentation-urllib3 = "0.45b0"
opentelemetry-instrumentation-requests = "0.45b0"
opentelemetry-resourcedetector-process = "0.3.0"
opentelemetry-resourcedetector-docker = "0.4.0"
opentelemetry-resourcedetector-kubernetes = "0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
philbot-voice = "voice:main"
