[tool.poetry]
name = "philbot-voice"
version = "2.46.0"
description = ""
authors = ["philipp.lengauer <p.lengauer@gmail.com>"]
packages = [{include = "philbot-voice"}]

[tool.poetry.dependencies]
python = "3.14.0"
Flask = "3.1.2"
websocket-client = "1.9.0"
PyNaCl = "1.6.1"
PyOgg = "0.6.14a1"
yt_dlp = "2025.11.12"
opentelemetry-sdk = "1.38.0"
opentelemetry-exporter-otlp-proto-http = "1.38.0"
opentelemetry-instrumentation = "0.47b0"
opentelemetry-instrumentation-system-metrics = "0.47b0"
opentelemetry-instrumentation-flask = "0.47b0"
opentelemetry-instrumentation-urllib = "0.47b0"
opentelemetry-instrumentation-urllib3 = "0.47b0"
opentelemetry-instrumentation-requests = "0.47b0"
opentelemetry-resourcedetector-process = "0.3.0"
opentelemetry-resourcedetector-docker = "0.4.0"
opentelemetry-resourcedetector-kubernetes = "0.3.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
philbot-voice = "voice:main"
